--- a/_includes/loading.html
+++ b/_includes/loading.html
@@ -1,6 +1,6 @@
 <div id="loading">
     <div class="loading_box">
         <img src="{{ '/assets/img/loading.webp' | prepend: site.baseurl }}">
-        <p>Now Loading ...</p>
+        <p>페이지를 불러오고 있습니다 . . .</p>
     </div>
 </div>
