--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
         <div class="not-found-msg">
             <h1 class="sour-face">`Φ ⌒ `Φ ?</h1>
             <p style="font-size:1.75rem; color:#fa4251;">404: Page not found</p>
-            <p style="font-size:1.25rem;">D-Data breach...? &nbsp&nbsp No such thing allowed!</p>
+            <p style="font-size:1.25rem;">잘못된 접근입니다. 다시 시도해주세요!</p>
         </div>
         </div>
     </body>
