--- a/_includes/loading.html
+++ b/_includes/loading.html
@@ -1,6 +1,6 @@
 <div id="loading">
     <div class="loading_box">
-        <img src="{{ '/assets/img/loading.webp' | prepend: site.baseurl }}">
-        <p>페이지를 불러오고 있습니다 . . .</p>
+        <img src="{{ '/assets/img/loading.png' | prepend: site.baseurl }}">
+        <p>지식 오픈소스 창고</p>
     </div>
 </div>
