--- a/_includes/loading.html
+++ b/_includes/loading.html
@@ -1,6 +1,5 @@
 <div id="loading">
     <div class="loading_box">
-        <img src="{{ '/assets/img/loading.png' | prepend: site.baseurl }}">
-        <p>지식 오픈소스 창고</p>
+        <img src="{{ '/assets/img/loading.png' | prepend: site.baseurl }}" style="width: 300px; height: 300px;">
     </div>
 </div>
