--- a/_includes/search.html
+++ b/_includes/search.html
@@ -4,7 +4,7 @@
     <div class="wave"></div>
 
     <div class="search-box">
-        <mark>Touch background to close</mark>
+        <mark>키워드를 입력해주세요.</mark>
         <div class="input-box">
             <input id="search-input"
                 type="search" 
