--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,11 +6,10 @@
     </head>
     <body>
         <div class="blank-page">
-        <a href="{{ '/' | prepend: site.baseurl }}" class="go-home">↩️ GO HOME</a>
         <div class="not-found-msg">
-            <h1 class="sour-face">`Φ ⌒ `Φ ?</h1>
+            <h1 class="sour-face">Warning</h1>
             <p style="font-size:1.75rem; color:#fa4251;">404: Page not found</p>
-            <p style="font-size:1.25rem;">잘못된 접근입니다. 다시 시도해주세요!</p>
+            <p style="font-size:1.25rem;">The URL on this page is an invalid path.</p>
         </div>
         </div>
     </body>
