--- a/_sass/sidebar.scss
+++ b/_sass/sidebar.scss
@@ -117,7 +117,7 @@
         }
 
         &:hover{
-          svg { fill:orange; }
+          svg { fill:#fa4251; }
 
           transform:scale(1.5) translateY(-12.5%);
         }
@@ -139,7 +139,7 @@
     width:2.75rem;
     aspect-ratio:1;
     text-align:center;
-    background:#ffe390;
+    background:#ffffff00;
     border:none;
     border-radius:50%;
     margin-left:1rem;
