--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -16,9 +16,14 @@
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg>
             </button>
         </h1>
+        <a href="http://cocodeing.notion.site" class="site-avatar" aria-label="site-avatar">
+            <img src="{{ site.profile_img | prepend: site.baseurl }}" loading="lazy" alt="homepage" aria-label="homepage-button">
+        </a>        
+        <!--
         <a href="{{ site.baseurl | append: '/' }}" class="site-avatar" aria-label="site-avatar">
             <img src="{{ site.profile_img | prepend: site.baseurl }}" loading="lazy" alt="homepage" aria-label="homepage-button">
         </a>
+        -->
     </div>
     <div class="side-info">
         {% include navigation.html %}
@@ -59,7 +64,7 @@
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z"/></svg>
                     </a></li>
                 {% endif %}
--->
+
             </ul>
             <hr>
             <span>
