--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -3,7 +3,7 @@
 
 <h1 class="category-header">
     {% if page_level == 1 %}
-        모든 게시글
+        All Posts
     {% else %}
         {{ category_title }}
     {% endif %}
@@ -56,7 +56,7 @@
     {% if post_counts == 0 %}
         <div class="no-posts">
             <img src="{{ '/assets/img/sorry.png'' | prepend: site.baseurl }}"></img>
-            <h1>게시글이 등록되지 않았습니다.</h1>
+            <h1>Sorry, No posts found</h1>
         </div>
     {% endif %}
 </div>
