--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -55,7 +55,7 @@
     </ul>
     {% if post_counts == 0 %}
         <div class="no-posts">
-            <img src="{{ '/assets/img/sorry.png'' | prepend: site.baseurl }}"></img>
+            <img src="{{ '/assets/img/close.webp'' | prepend: site.baseurl }}"></img>
             <h1>포스트가 존재하지 않습니다</h1>
         </div>
     {% endif %}
