--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -86,7 +86,7 @@
 .nav-lh svg {
   margin-left:-0.25rem;
   position:relative;
-  fill:$color-darkorange;
+  fill:#fa4251;
   transform:translateY(-2px);
 }
 .nav-sh svg { 
