--- a/_includes/search_event.html
+++ b/_includes/search_event.html
@@ -1,18 +1,21 @@
-{%- assign page_list = site.pages 
-    | where_exp: "item", "item.title != nil"
--%}
-<script defer>
+<div id="sidebar">
+    <ul id="menu">
+      <!-- Sidebar will be populated by JavaScript -->
+    </ul>
+  </div>
+  
+  <script>
     var posts = [];
-
+    
     {% for page in page_list %}
         {%- assign psearch_tree = page.path | split: "/" -%}
-
+  
         {% if psearch_tree.last == "index.md" %}
             {%- assign p_type = "category" -%}
         {% else %}
             {%- assign p_type = "post" -%}
         {% endif %}
-
+  
         {%- assign tree_len = psearch_tree.size | minus: 2 -%}
         {%- assign psearch_tree = psearch_tree | slice:1, tree_len -%}
         {%- assign p_link = "" -%}
@@ -23,9 +26,9 @@
                 {%- assign p_link = p_link | append: sub_tree | append: " > " -%}
             {% endif %}
         {%- endfor -%}
-
+  
         {%- assign thumbnail_url = page.thumbnail -%}
-
+  
         {% if thumbnail_url != nil %}
             {%- assign check_localasset = thumbnail_url | split:'/' -%}
             {% if check_localasset[0] == '' %}
@@ -34,7 +37,7 @@
         {% else %}
             {%- assign thumbnail_url = '/assets/img/thumbnail/empty.jpg' | prepend: site.baseurl -%}
         {% endif %}
-
+  
         posts.push({
             'title'    : "{{ page.title | escape }}",
             'path'     : "{{ p_link }}",
@@ -45,10 +48,31 @@
             'date'     : "{{ page.date | date: '%Y-%m-%d' }}"
         });
     {% endfor %}
-
+  
+    function searchPost(posts) {
+      var categories = {};
+  
+      // Group posts by main categories
+      posts.forEach(function(post) {
+        var mainCategory = post.path.split(' > ')[0];
+  
+        if (!categories[mainCategory]) {
+          categories[mainCategory] = { count: 0, posts: [] };
+        }
+  
+        categories[mainCategory].count += 1;
+        categories[mainCategory].posts.push(post);
+      });
+  
+      // Display categories with post count
+      var menu = document.getElementById('menu');
+      for (var category in categories) {
+        var li = document.createElement('li');
+        li.innerHTML = `# ${category} (${categories[category].count})`;
+        menu.appendChild(li);
+      }
+    }
+  
     searchPost(posts);
-
-    {% if page_type == "post" %}
-        searchRelated(posts);
-    {% endif %}
-</script>
+  </script>
+  
